--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='www.linkedin.com/in/surakshachaudhary'"
+            onclick="location.href='https://www.linkedin.com/in/surakshachaudhary/'"
           />
           <img
             src="./assets/github.png"
@@ -122,12 +122,12 @@
           </div>
         </div>
       </div>
-      <img
+      <!-- <img
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
-      />
+      /> -->
     </section>
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
@@ -256,12 +256,12 @@
           </div>
         </div>
       </div>
-      <img
+      <!-- <img
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
-      />
+      /> -->
     </section>
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
@@ -342,12 +342,12 @@
           </div>
         </div>
       </div>
-      <img
+      <!-- <img
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
-      />
+      /> -->
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
@@ -367,7 +367,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="www.linkedin.com/in/surakshachaudhary">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/surakshachaudhary/">LinkedIn</a></p>
         </div>
       </div>
     </section>
