--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Suraksha Chaudhary</div>
+      <div class="logo">^_^*</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/SurakshaChaudhary_Resume2024.pdf')"
           >
             Download CV
           </button>
